--- a/editor-ui/sass/editor/_editor-asset-related-assets.scss
+++ b/editor-ui/sass/editor/_editor-asset-related-assets.scss
@@ -8,7 +8,7 @@
     border-left: 1px solid $bcg-darker;
     border-top: 1px solid $bcg-darker;
     border-right: 1px solid $bcg-darker;
-    margin: 0px $element-margin;
+    margin: 0 $element-margin;
     flex-grow: 1;
     cursor: pointer;
     line-height: 22px;
