--- a/editor-ui/sass/editor/_editor-template-override-inspector.scss
+++ b/editor-ui/sass/editor/_editor-template-override-inspector.scss
@@ -1,5 +1,5 @@
 .template-inspector-override {
-    $override-color: #0DFCED;
+    $override-color: #0dfced;
 
     // label group
     &.pcui-label-group {
