--- a/editor-ui/sass/code-editor-v2/_theme-dark.scss
+++ b/editor-ui/sass/code-editor-v2/_theme-dark.scss
@@ -1,7 +1,6 @@
 @import 'variables';
 @import '../fonts';
 
-
 body {
     color: $text-secondary;
     background-color: $bcg-darker;
@@ -11,15 +10,19 @@ body {
     width: 8px;
     height: 8px;
 }
+
 ::-webkit-scrollbar-track {
     background: $bcg-primary;
 }
+
 ::-webkit-scrollbar-thumb {
     background: $bcg-dark;
 }
+
 ::-webkit-scrollbar-corner {
     background: $bcg-primary;
 }
+
 ::-webkit-scrollbar-thumb:hover {
     background: $text-active;
 }
@@ -28,6 +31,7 @@ body {
     color: $text-active;
     background-color: $bcg-darkest;
 }
+
 ::selection {
     color: $text-active;
     background-color: $bcg-darkest;
@@ -37,10 +41,12 @@ a {
     color: $text-active;
     text-decoration: none;
 }
+
 a:hover {
     color: saturate(lighten($text-active, 10%), 10%);
     text-decoration: underline;
 }
+
 a:visited {
     color: $text-active;
 }
@@ -59,11 +65,13 @@ a:visited {
             background-color: mix($bcg-dark, $bcg-primary, 60);
         }
     }
+
     &.scrollable {
         > .content {
             top: 32px;
         }
     }
+
     > header {
         @extend .font-bold;
         @extend .font-smooth;
@@ -71,6 +79,7 @@ a:visited {
         color: $text-primary;
         font-size: 12px;
     }
+
     &.foldable {
         &.folded {
             > header {
@@ -81,6 +90,7 @@ a:visited {
                     content: '\E180';
                 }
             }
+
             &.horizontal {
                 background-color: $bcg-darker;
 
@@ -95,6 +105,7 @@ a:visited {
                 }
             }
         }
+
         > header {
             padding-left: 32px;
 
@@ -122,10 +133,12 @@ a:visited {
                 background-color: transparent;
             }
         }
+
         &.horizontal {
             > header:after {
                 content: '\E183';
             }
+
             &.resizable-right {
                 &.folded {
                     > header:after {
@@ -145,23 +158,27 @@ a:visited {
             }
         }
     }
+
     &.resizable {
         $handle-size: 1px;
 
         &.resizing > .handle {
             background-color: transparent;
         }
+
         &.resizable-left {
             padding-left: 0;
 
             &.scrollable > .content {
                 left: 0;
             }
+
             > .handle {
                 width: $handle-size;
                 border-left: 3px solid $bcg-darkest;
             }
         }
+
         &.resizable-right {
             padding-right: 0;
 
@@ -170,17 +187,20 @@ a:visited {
                 border-right: 3px solid $bcg-darkest;
             }
         }
+
         &.resizable-top {
             padding-top: 0;
 
             &.scrollable > .content {
                 top: 32px;
             }
+
             > .handle {
                 height: $handle-size;
                 border-top: 3px solid $bcg-darkest;
             }
         }
+
         &.resizable-bottom {
             padding-bottom: 0;
 
@@ -189,9 +209,11 @@ a:visited {
                 border-bottom: 3px solid $bcg-darkest;
             }
         }
+
         &.resizing > .handle {
             opacity: 1;
         }
+
         > .handle {
             opacity: 0;
             background-color: transparent;
@@ -202,6 +224,7 @@ a:visited {
             }
         }
     }
+
     &.flash {
         @extend .ui-flash;
     }
@@ -218,11 +241,13 @@ a:visited {
                 }
             }
         }
+
         &.rename {
             > .title {
                 background-color: $bcg-darkest;
             }
         }
+
         > .title {
             > .text {
                 @extend .font-regular;
@@ -233,8 +258,10 @@ a:visited {
                     color: #fff;
                 }
             }
+
             > .icon {
                 color: $text-darkest;
+
                 &:after {
                     @extend .font-icon;
                     font-size: 16px;
@@ -248,25 +275,30 @@ a:visited {
         &.type-folder .icon:after {
             content: '\E139';
         }
+
         &.type-script .icon:after {
             content: '\E392';
         }
+
         &.type-html .icon:after {
             content: '\E205';
         }
+
         &.type-css .icon:after {
             content: '\E206';
         }
+
         &.type-shader .icon:after {
             content: '\E219';
         }
+
         &.type-text .icon:after {
             content: '\E209';
         }
+
         &.type-json .icon:after {
             content: '\E207';
         }
-
     }
 }
 
@@ -297,12 +329,14 @@ a:visited {
             }
         }
     }
+
     &.disabled {
         > .title > .icon:after {
             background-color: mix($text-darkest, $bcg-primary, 50%);
             opacity: 1;
         }
     }
+
     > .title {
         color: $text-secondary;
 
@@ -316,6 +350,7 @@ a:visited {
                 background-color: mix($text-darkest, $text-active, 50%);
             }
         }
+
         > .icon {
             // line-left
             &:before {
@@ -330,6 +365,7 @@ a:visited {
             }
         }
     }
+
     &.selected {
         > .title {
             background-color: $bcg-darkest;
@@ -343,9 +379,10 @@ a:visited {
             }
         }
     }
+
     &.dragged {
         > .title {
-            background-color: rgba($bcg-dark, .5);
+            background-color: rgba($bcg-dark, 0.5);
             color: $text-primary;
         }
     }
@@ -374,7 +411,6 @@ a:visited {
     }
 }
 
-
 .ui-menu-item {
     font-size: 14px;
 
@@ -387,6 +423,7 @@ a:visited {
             color: $text-dark;
         }
     }
+
     &.container {
         > .title:after {
             content: '\E160';
@@ -397,6 +434,7 @@ a:visited {
             color: $text-dark;
             line-height: 14px;
         }
+
         &.hover > .title {
             color: $text-primary;
             background-color: $text-darkest;
@@ -404,16 +442,19 @@ a:visited {
             &:after {
                 color: $text-primary;
             }
+
             > .icon {
                 color: $text-primary;
             }
         }
     }
+
     &:last-child {
         > .title {
             border-bottom: none;
         }
     }
+
     > .title {
         color: $text-dark;
         border-bottom: 1px solid mix($bcg-darkest, $bcg-dark, 50%);
@@ -426,6 +467,7 @@ a:visited {
                 color: $text-primary;
             }
         }
+
         > .icon {
             @extend .font-icon;
             font-size: 14px;
@@ -434,8 +476,9 @@ a:visited {
             color: $text-dark;
         }
     }
+
     > .content {
-        box-shadow: 0 0 8px rgba(0, 0, 0, .3);
+        box-shadow: 0 0 8px rgba(0, 0, 0, 0.3);
     }
 }
 
@@ -453,7 +496,7 @@ a:visited {
         background: -ms-linear-gradient(-45deg, $first 0%, $first 25%, $second 26%, $second 50%, $first 51%, $first 75%, $second 76%, $second 100%);
         background: -o-linear-gradient(-45deg, $first 0%, $first 25%, $second 26%, $second 50%, $first 51%, $first 75%, $second 76%, $second 100%);
         background: linear-gradient(135deg, $first 0%, $first 25%, $second 26%, $second 50%, $first 51%, $first 75%, $second 76%, $second 100%);
-        background-position: 0px 0px;
+        background-position: 0 0;
         background-size: 24px 24px;
         background-repeat: repeat;
     }
@@ -467,6 +510,7 @@ a:visited {
     > input.field {
         color: $text-secondary;
     }
+
     &.active,
     &:hover,
     &:focus,
@@ -474,6 +518,7 @@ a:visited {
         border-color: $bcg-darkest;
         background-color: $bcg-darkest;
     }
+
     > input.field:focus,
     > input.field:hover {
         box-shadow: none;
@@ -486,6 +531,7 @@ a:visited {
         @extend .ui-flash;
     }
 }
+
 .ui-text-field[placeholder] {
     &:after {
         color: $text-darkest;
@@ -495,8 +541,9 @@ a:visited {
 
 .ui-overlay {
     > .overlay {
-        background-color: rgba($bcg-darkest, .4);
+        background-color: rgba($bcg-darkest, 0.4);
     }
+
     > .content {
         background-color: $bcg-primary;
     }
@@ -535,54 +582,63 @@ a:visited {
             }
         }
     }
+
     &.align-top {
         margin-left: -16px;
 
         > .inner {
             margin-top: 8px;
         }
+
         > .arrow {
             top: -8px;
             left: 8px;
             border-bottom-color: mix($bcg-darkest, #000, 75%);
         }
     }
+
     &.align-right {
         margin-top: -16px;
 
         > .inner {
             margin-right: 8px;
         }
+
         > .arrow {
             top: 8px;
             right: -8px;
             border-left-color: mix($bcg-darkest, #000, 75%);
         }
     }
+
     &.align-bottom {
         margin-left: -16px;
 
         > .inner {
             margin-bottom: 8px;
         }
+
         > .arrow {
             bottom: -8px;
             left: 8px;
             border-top-color: mix($bcg-darkest, #000, 75%);
         }
     }
+
     &.align-left {
         margin-top: -16px;
 
         > .inner {
             margin-left: 8px;
         }
+
         > .arrow {
             top: 8px;
             left: -8px;
             border-right-color: mix($bcg-darkest, #000, 75%);
         }
     }
+
     > .inner {
         padding: 0 16px;
         line-height: 32px;
@@ -590,12 +646,14 @@ a:visited {
         background-color: mix($bcg-darkest, #000, 75%);
         color: $text-primary;
     }
+
     > .arrow {
         width: 0;
         height: 0;
         position: absolute;
         border: 8px solid transparent;
     }
+
     &.innactive {
         > .inner {
             color: $text-darkest;
