--- a/editor-ui/sass/code-editor-v2/_variables.scss
+++ b/editor-ui/sass/code-editor-v2/_variables.scss
@@ -6,24 +6,24 @@ $bcg-dark: mix($bcg-primary, $bcg-darkest, 75%);
 $text-darkest: #5b7073;
 $text-dark: #9ba1a3;
 $text-secondary: #b1b8ba;
-$text-primary: #ffffff;
+$text-primary: #fff;
 $text-active: #f60;
 
 $field-padding: 3px;
 
 $border-primary: mix($bcg-darkest, $bcg-dark, 50%);
 
-$disabled-opacity: .4;
+$disabled-opacity: 0.4;
 
 $editor-bg: #1d292c;
-$editor-gutter-bg: $editor-bg;//lighten($editor-bg, 2%);
+$editor-gutter-bg: $editor-bg;
 $editor-text-color: #f8f4f0;
 $editor-gutter-fg: #5b7073;
-$editor-line-highlight: #324447;//#163a43;
-$editor-selection: #677173; //#324447;//#275C69;
+$editor-line-highlight: #324447;
+$editor-selection: #677173;
 $editor-activeline-bg: lighten($editor-bg, 10);
 $editor-activeline-linenumber-bg: lighten($editor-bg, 10);
-$editor-activeline-linenumber: #B1B8BA;
+$editor-activeline-linenumber: #b1b8ba;
 $editor-tooltip-bg: $bcg-primary;
 $editor-hint-line: #b1b8ba;
 $editor-hint-line-active: $editor-text-color;
@@ -36,7 +36,7 @@ $editor-numeric: #c978eb;
 $editor-keyword: #77bef3;
 $editor-tag: #ed1e79;
 $editor-string: $editor-yellow;
-$editor-link: #F16524;
+$editor-link: #f16524;
 $editor-comment: #779296;
 $editor-meta: #779296;
 $editor-def: #3cff94;
@@ -44,7 +44,7 @@ $editor-variable: white;
 $editor-variable-2: white;
 $editor-variable-3: white;
 $editor-parameter: #ff842f;
-$editor-attribute-name: #A9E884;
+$editor-attribute-name: #a9e884;
 $editor-property: white;
 $editor-attribute: white;
 $editor-function: $editor-variable;
@@ -64,15 +64,15 @@ $top-bar-line-height: 34px;
 $top-bar-border: 1px;
 $top-bar-height: $top-bar-line-height + $top-bar-border;
 
-$muted-green: #27AE60;
-$bright-green: #2ECC71;
-$bg-bright: #5B7073;
-$bright-red: #E74C3C;
-$bright-blue: #2999F0;
-$muted-blue: #1D7BEA;
+$muted-green: #27ae60;
+$bright-green: #2ecc71;
+$bg-bright: #5b7073;
+$bright-red: #e74c3c;
+$bright-blue: #2999f0;
+$muted-blue: #1d7bea;
 $gray-light: lighten(#000, 60%);
-$bright-yellow: #F1C40F;
-$muted-yellow: #F4A62A;
+$bright-yellow: #f1c40f;
+$muted-yellow: #f4a62a;
 $text-color: #324447;
 
 $status-error: $bright-red;
