--- a/editor-ui/sass/editor/_editor-template-entity-inspector.scss
+++ b/editor-ui/sass/editor/_editor-template-entity-inspector.scss
@@ -7,7 +7,6 @@
     }
 }
 
-
 .template-entity-inspector-header {
     color: $text-primary;
     font-size: 12px;
@@ -41,6 +40,7 @@
 
 .template-entity-inspector-root {
     font-size: 12px;
+
     &:before {
         content: '\E411';
         @extend .font-icon;
@@ -62,7 +62,7 @@
 
 .template-entity-inspector-overrides-positive {
     .template-entity-inspector-overrides {
-        color: #00F1FF;
+        color: #00f1ff;
     }
 }
 
@@ -117,7 +117,7 @@
     top: -2px;
     font-size: 12px;
     line-height: 1;
-    color: #00F1FF;
+    color: #00f1ff;
 }
 
 .template-entity-inspector-entity-list-icon-font {
